Fixed bugs in the code